<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nl.nujules.travellerapp.AddReview"
    style="@style/Background">

    <Button
        style="@style/Menu.Open"
        android:id="@+id/btnMenu"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/trasparentBackground">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="45dp"
            android:id="@+id/tableLayout">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:weightSum="1" >

                <TextView
                    style="@style/WhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/NearbyResultSpecificInfoName" />

                <TextView
                    style="@style/WhiteText"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/NearbyResultSpecificName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:weightSum="1" >

                <TextView
                    style="@style/WhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/NearbyResultSpecificInfoPhone" />

                <TextView
                    style="@style/WhiteText"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/NearbyResultSpecificPhone" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:weightSum="1" >

                <TextView
                    style="@style/WhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/NearbyResultSpecificInfoWebsite" />

                <TextView
                    style="@style/WhiteText"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/NearbyResultSpecificWebsite" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:weightSum="1" >

                <TextView
                    style="@style/WhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/NearbyResultSpecificInfoAddress" />

                <TextView
                    style="@style/WhiteText"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/NearbyResultSpecificAddress" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:weightSum="1" >

                <TextView
                    style="@style/WhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/NearbyResultSpecificInfoPostal" />

                <TextView
                    style="@style/WhiteText"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/NearbyResultSpecificPostal" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:weightSum="1" >

                <TextView
                    style="@style/WhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/NearbyResultSpecificInfoCountry" />

                <TextView
                    style="@style/WhiteText"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/NearbyResultSpecificCountry" />
            </TableRow>
        </TableLayout>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:ems="10"
            android:id="@+id/addReviewContent"
            android:hint="@string/AddReviewContentHint"
            android:layout_above="@+id/addReviewKeywordsSpinnr"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addReviewKeywordsSpinnr"
            android:layout_above="@+id/button2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            style="@style/Button.Review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnReview"
            android:id="@+id/button2"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</RelativeLayout>
