<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nl.nujules.travellerapp.Profile"
    style="@style/Background">

    <Button
        style="@style/Menu.Open"
        android:id="@+id/btnMenu"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/trasparentBackground">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/profile_placeholder"
            android:id="@+id/profileImage"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="52dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/profileImage"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:weightSum="1">
                <TextView
                    style="@style/WhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/ProfileName"/>
                <TextView
                    style="@style/WhiteText"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="0.5"
                    android:id="@+id/profileName"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:weightSum="1">
                <TextView
                    style="@style/WhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/profileEmail"/>
                <TextView
                    style="@style/WhiteText"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="0.5"
                    android:id="@+id/profileEmail"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:weightSum="1">
                <TextView
                    style="@style/WhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/profileBio"/>
                <TextView
                    style="@style/WhiteText"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="0.5"
                    android:id="@+id/profileBio"
                    />
            </TableRow>

        </TableLayout>
    </RelativeLayout>

</RelativeLayout>
